k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-weather-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: super-weather-backend
  template:
    metadata:
      labels:
        app: super-weather-backend
    spec:
      containers:
        - name: backend-golang-container
          image: ajj132/super-weather-app-bff:latest
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
          ports:
            - containerPort: 8082
