k8s/cache-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-weather-cache-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-database
  template:
    metadata:
      labels:
        app: cache-database
    spec:
      containers:
        - name: cache-mongodb-container
          image: ajj132/super-weather-app-cache-database:latest
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
