k8s/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-weather-cache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: super-weather-cache
  template:
    metadata:
      labels:
        app: super-weather-cache
    spec:
      containers:
        - name: cache-golang-container
          image: ajj132/super-weather-app-cache:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 8090
