k8s/login-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-database
  template:
    metadata:
      labels:
        app: login-database
    spec:
      containers:
        - name: login-postgres-container
          image: ajj132/super-weather-app-login-database:latest
          ports:
            - containerPort: 5432
