k8s/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-weather-login-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: super-weather-login
  template:
    metadata:
      labels:
        app: super-weather-login
    spec:
      containers:
        - name: login-golang-container
          image: ajj132/super-weather-app-login:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 8086
