k8s/weather-mngr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-mngr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-mngr
  template:
    metadata:
      labels:
        app: weather-mngr
    spec:
      containers:
        - name: weather-mngr-golang-container
          image: ajj132/super-weather-app-weather-mngr:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 8093
