k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-weather-backend-service
spec:
  selector:
    app: super-weather-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8082
