k8s/cache-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-database-service
spec:
  selector:
    app: cache-database
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 27017
