k8s/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-weather-cache-service
spec:
  selector:
    app: super-weather-cache
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8090
