k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-weather
spec:
  type: LoadBalancer
  selector:
    app: super-weather-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
