k8s/login-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-database-service
spec:
  selector:
    app: login-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
