k8s/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: super-weather-login
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8086
