k8s/weather-mngr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-mngr-service
spec:
  selector:
    app: weather-mngr
  ports:
    - protocol: TCP
      port: 8094
      targetPort: 8093
